# PhD-project

./: .gitignore  pyproject.toml
cnn_project/: __main__.py  cnn_model.py  data_loader.py  gui.py  inception.py  object_detection.py  plot_creator.py
